// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notice demo -- base 1`] = `
.c3 {
  vertical-align: baseline;
}

.c1 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.c6 {
  cursor: pointer;
}

.c0 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c0 .c2 {
  color: #6b798e;
}

.c7 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #eaf3fd;
  border: 1px solid #cae3ff;
}

.c7 .c2 {
  color: #4683e6;
}

.c8 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fffce5;
  border: 1px solid #fff28f;
}

.c8 .c2 {
  color: #f9ce1d;
}

.c9 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fff0f0;
  border: 1px solid #fed4d4;
}

.c9 .c2 {
  color: #f44336;
}

<div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c7"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c8"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c9"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
</div>
`;

exports[`Notice demo -- custom 1`] = `
.c3 {
  vertical-align: baseline;
}

.c7 {
  vertical-align: baseline;
}

.c7.c7.c7 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c1 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c8 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.c5 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.c6 {
  cursor: pointer;
}

.c0 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c0 .c2 {
  color: #6b798e;
}

.c9 .c2 {
  color: #4683e6;
}

.c10 .c2 {
  color: #f9ce1d;
}

.c11 .c2 {
  color: #f44336;
}

<div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__loading c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__loading uc-fe-icon-spin c7"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c8"
    >
      <i
        class="uc-fe-icon icon__loading c3"
      />
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content
    </div>
    <div
      class="c8"
    >
      <i
        class="uc-fe-icon icon__loading c3"
      />
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
</div>
`;

exports[`Notice demo -- notice 1`] = `
.c12 {
  vertical-align: baseline;
}

.c25 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c27 {
  display: table-cell;
  vertical-align: middle;
}

.c24 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c24 .c26 {
  color: #6b798e;
}

.c28 .c26 {
  color: #4683e6;
}

.c29 .c26 {
  color: #f9ce1d;
}

.c30 .c26 {
  color: #f44336;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #3555f6;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c32 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c32:last-child {
  margin-right: 0;
}

.c7 .c33+.c33 {
  margin-left: -1px;
}

.c7 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            default
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            success
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            warning
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            error
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        closable
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        icon
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            undefined
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            loading
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            circle
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        longContent
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        withAction
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c24"
    >
      <span
        class="c25"
      >
        <i
          class="uc-fe-icon icon__circle-mark2 c26 c12"
        />
      </span>
      <div
        class="c27"
      >
        This is a notice
      </div>
    </div>
  </div>
</div>
`;
